[gd_scene load_steps=15 format=3 uid="uid://dl60tvwy1elkf"]

[ext_resource type="Script" uid="uid://cwfgwnkth6x74" path="res://protag/scripts/player_base.gd" id="1_yvqfv"]
[ext_resource type="Script" uid="uid://ci0muygltpwcc" path="res://protag/RaycastAlign.gd" id="2_65wl4"]
[ext_resource type="PackedScene" uid="uid://csjcseh76ann" path="res://protag/phone/Phone_Root_Scene.tscn" id="2_nqwbi"]
[ext_resource type="PackedScene" uid="uid://d1w1jahqvppkf" path="res://UI/UI_Root_Scene.tscn" id="5_7uxf5"]
[ext_resource type="AudioStream" uid="uid://cf3ky2gprqugr" path="res://protag/assets/Concrete Footstep 1 SOUND Effect.mp3" id="8_bhrfm"]
[ext_resource type="Script" uid="uid://qkgymnnknv6n" path="res://protag/scripts/FootstepAudioPlayer.gd" id="9_f878c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ni7be"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kn71c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt81q"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ju561"]

[sub_resource type="Animation" id="Animation_m56i8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0872665, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i383i"]
resource_name = "crouch"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.533333, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, 0.00523599), Vector3(-0.0174533, 0, -0.00174533), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_d5j1e"]
resource_name = "stand up"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 1.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0261799, 0, -0.00523599), Vector3(-0.0122173, 0, 0.00174533), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wpsm1"]
_data = {
&"RESET": SubResource("Animation_m56i8"),
&"crouch": SubResource("Animation_i383i"),
&"stand": SubResource("Animation_d5j1e")
}

[node name="Protagonist" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER")]
collision_layer = 16
collision_mask = 33
script = ExtResource("1_yvqfv")
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["PlayerCollider"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ni7be")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.418648, 0)
mesh = SubResource("CapsuleMesh_kn71c")
surface_material_override/0 = SubResource("StandardMaterial3D_mt81q")

[node name="CrouchCollisionShapeCast" type="ShapeCast3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.447816, 0)
visible = false
shape = SubResource("SphereShape3D_ju561")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(1.29953e-06, 0.670053, 0.480873, 1)

[node name="CameraController" type="Node3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(1, 0, 0, 0, 0.996195, -0.0871558, 0, 0.0871558, 0.996195, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
physics_interpolation_mode = 1
cull_mask = 1047553

[node name="PhonePositionalAnchors" type="Node3D" parent="CameraController/Camera3D"]

[node name="Close" type="Node3D" parent="CameraController/Camera3D/PhonePositionalAnchors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.07)

[node name="Far" type="Node3D" parent="CameraController/Camera3D/PhonePositionalAnchors"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.1, -0.05, -0.15)

[node name="Away" type="Node3D" parent="CameraController/Camera3D/PhonePositionalAnchors"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.115, -0.3, -0.2)

[node name="CarInteractRaycast" type="RayCast3D" parent="CameraController/Camera3D"]
target_position = Vector3(3, 0, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 1
script = ExtResource("2_65wl4")

[node name="PhoneNode" parent="CameraController/Camera3D" instance=ExtResource("2_nqwbi")]
physics_interpolation_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.440142, -0.375938, -0.56255)

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="CameraController"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_wpsm1")
}

[node name="UI" parent="." instance=ExtResource("5_7uxf5")]

[node name="MiddleReticle" parent="UI/Player" index="0"]
offset_left = -1.0
offset_top = -1.0
offset_right = 39.0
offset_bottom = 39.0

[node name="FootstepAudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_bhrfm")
volume_db = -25.0
script = ExtResource("9_f878c")

[editable path="CameraController/Camera3D/PhoneNode"]
[editable path="UI"]
